rebuild load bean process